# daylight-kr

./: .gitignore  .goreleaser.yaml  README.md  art.piskel  go.mod  go.sum  main.go  main.py  makefile  pyproject.toml  requirements.txt  setup.cfg
cmd/daylength/: main.go
cmd/daylight/: art.go  main.go  view.go
daylight_py/: calculations.py  condensed_view.py  ipinfo.py
internal/: args.go  art.go  cmd.go  condensed.go  config.go  daylight.go  daylight_test.go  format.go  format_test.go  ipinfo.go  jsonview.go  summary.go  today.go  view.go
internal/templates/: embed.go  sun.txt  templates.go  today.go.tmpl
src/daylight_py/: app.py  calculations.py  condensed_view.py  full_view.py  json_view.py  main.py
tests/: test_calculations.py  test_ipinfo.py  test_views.py
