[metadata]
# Name and version will be taken from pyproject.toml
# license_file = LICENSE # Also can be specified here or in pyproject.toml

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests
    pytz
    astral>=3.0

[options.packages.find]
where = .
include = daylight_py*

[options.entry_points]
console_scripts =
    daylight-py = main:main

[options.extras_require]
test =
    # Add test dependencies here if not fully managed by pyproject.toml
    # For example:
    # pytest
    # coverage
    # unittest-xml-reporting
    # requests-mock (if used instead of unittest.mock)

# Example of how to include package data if needed:
# [options.package_data]
# daylight_py = data/*.json
# Or using MANIFEST.in for more complex cases.
# For this project, no extra package data seems needed.
